[package]
name = "ddocs"
version = "0.9.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
clap = { version = "4.2.4", features = ["derive"] }
flate2 = "1.0.25"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
